--- a/app/less/menu.less
+++ b/app/less/menu.less
@@ -59,6 +59,7 @@
         text-decoration: none;
         text-align: right;
         transition: 0.5s;
+        opacity: 1;
 
         &:hover {
             opacity: 0.5;
